--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,12 @@ i {
     text-align: center;
 }
 
+.item-row-heading .item-profile-2 {
+    float: left;
+    width: 45%;
+    text-align: center;
+}
+
 .item-row-heading .item-company-1 {
     float: left;
     width: 85%;
@@ -236,6 +242,20 @@ i {
     float: left;
     width: 30%;
     overflow: hidden;
+}
+
+.item-row-heading .item-company-2 {
+    float: left;
+    width: 30%;
+    overflow: hidden;
+}
+
+.item-company-2 .head-italic {
+    font-style: italic;
+    font-weight: 300;
+    float: left;
+    display: inline-block;
+    position: absolute;
 }
 
 .item-year {
