--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ i {
     font-weight: 600;
     text-transform: uppercase;
     margin-bottom: 0%;
-    background-color: black;
+    background-color: #000;
     padding-left: 3pt;
     padding-top: 2pt;
     padding-bottom: 2pt;
